--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -70,7 +70,7 @@ body:
     attributes:
       label: PowerShell Modules
       description: Please provide information about the PowerShell modules are you using. Please provide the output from the following PowerShell command `Get-Module -ListAvailable @("AsBuiltReport.Core";"AsBuiltReport.Microsoft.DHCP";"PSPKI";"PScriboCharts";"PScribo") | Select Name, Version`
-      placeholder: Get-Module -ListAvailable @("AsBuiltReport.Core";"AsBuiltReport.Microsoft.DHCP";"PSPKI";"PScriboCharts";"PScribo") | Select Name, Version
+      placeholder: Get-Module -ListAvailable @("AsBuiltReport.Core";"AsBuiltReport.Microsoft.DHCP";"PScribo") | Select Name, Version
     validations:
       required: true
   - type: textarea
